  is coming from. Note this might not work properly if there is more than one
  tab from the same host open.
- The `qute-bitwarden` userscript understands a new
  `--password-prompt-invocation`, which can be used to specify a tool other
  than `rofi` to ask for a password.
- The `content.headers.custom` setting now accepts empty strings as values,
  resulting in an empty header being sent.

Added
~~~~~

- New `input.match_counts` option which allows to turn off count matching for
  more emacs-like bindings.
- New `{relative_index}` field for `tabs.title.format` (and `.pinned_format`)
  which shows relative tab numbers.
- New `input.mode_override` option which allows overriding the current mode
  based on the new URL when navigating or switching tabs.

Fixed
~~~~~

- When `search.incremental` is disabled, searching using `/text` followed by a
  backwards search via `?text` (or vice-versa) now correctly changes the search
  direction.
- Elements getting a hint due to a `tabindex` now are skipped if it's set to
  `-1`, reducing some false-positives.
- The audible indicator (`[A]`) now uses a 2s cooldown when the audio goes
  silent, equivalent with the behavior of older QtWebEngine versions.
- With `confirm_quit` set to `downloads`, the confirmation dialog is now only
  shown when closing the last window (rather than closing any window, which
  would continue running that window's downloads). Unfortunately, more issues
  with `confirm_quit` and multiple windows remain.
- Crash when a previous crash-log file contains non-ASCII characters (which
  should never happen unless it was edited manually)
- Due to changes in Debian, an old workaround (for broken QtWebEngine patching
  on Debian) caused the inferior qutebrowser error page to be displayed, when
  Chromium's would have worked fine. The workaround was now dropped.
- Crash when using `<Ctrl-D>` (`:completion-item-del`) in the `:tab-focus`
  list, rather than `:tab-select`.

[[v2.4.1]]
v2.4.1 (unreleased)